app/assets/stylesheets/upisdb.css.scss
@import 'bootstrap';
.content {
  padding-top: 50px;
}
.navbar-inner{
  height: 40px;
}
input,
input[type="password"],
input[type="text"] {
  height: 20px;
}
.ui-widget-header{
  margin-top: 0;
  padding: 0px;
}

.center {
  text-align: center;
}
.redtext{
  color: red;
}

.orangetext{
  color: orange;
}
.gray{
  color: #888;
}
input.gradesheetinput {
  width: 50px;
}
.emphasize {
  font-weight: bold;
  color: red;
}
.capslock {
  text-transform: uppercase;
}
#quarter-stub {
  border: 2px solid #000;
  min-height: 390px;
  margin: 2px;
  padding: 7px;
  width: 47%;
  float: left;
}
.page {
  display: inline-block;
  clear: both;
  page-break-after: auto;
  height: 1600px;
  width: 1050px;
}
.halfpage {
  display: inline-block;
  clear: both;
  page-break-after: auto;
  height: 1090px;
}
table.medium th, table.medium td {
  padding: 7px 8px;
  line-height: 13px;
}
table.smaller th, table.smaller td {
  padding: 7px 8px;
  line-height: 13px;
  text-align: center;
}
table.smallest th, table.smallest td {
  padding: 4px 8px;
  line-height: 10.5px;
  text-align: center;
}
table.smaller th{
  font-size: 14px;
}
table.smallest th {
  font-size: 13.5px;
}
.vertical-text{
  -webkit-transform:rotate(90deg);
	-moz-transform:rotate(90deg);
	-o-transform: rotate(90deg);
	white-space:nowrap;
}
#clear {
  width: 100%;
  clear: both;
}
.float-left {
  float: left;
}
.float-right {
  float: right;
}
.btn a {
  color: #FFF;
}
.navbar-inner.faculty ul.nav li a:hover {
  color: #FFF;
}
.btn-danger a,
.btn-info a,
.btn-warning a {
  color: #FFF;
}
/* must refactor later! */

.navbar-inner.faculty,
.navbar-inner.faculty ul.nav li a {
  color: #CCC;
  background-color: #2b2b2b;
  background-image: -moz-linear-gradient(top, #610000, #b11619);
  background-image: -ms-linear-gradient(top, #610000, #b11619);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#610000), to(#b11619));
  background-image: -webkit-linear-gradient(top, #610000, #b11619);
  background-image: -o-linear-gradient(top, #610000, #b11619);
  background-image: linear-gradient(top, #610000, #b11619);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#610000', endColorstr='#b11619', GradientType=0);
}
.navbar-inner.staff,
.navbar-inner.staff ul.nav li a {
  color: #CCC;
  background-color: #2b2b2b;
  background-image: -moz-linear-gradient(top, #222, #245A00);
  background-image: -ms-linear-gradient(top, #222, #245A00);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#222), to(#245A00));
  background-image: -webkit-linear-gradient(top, #222, #245A00);
  background-image: -o-linear-gradient(top, #222, #245A00);
  background-image: linear-gradient(top, #222, #245A00);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#222', endColorstr='#245A00', GradientType=0);
}
.navbar-inner.moderator,
.navbar-inner.moderator ul.nav li a {
  color: #CCC;
  background-color: #2b2b2b;
  background-image: -moz-linear-gradient(top, #333, #7A207D);
  background-image: -ms-linear-gradient(top, #333, #7A207D);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333), to(#7A207D));
  background-image: -webkit-linear-gradient(top, #333, #7A207D);
  background-image: -o-linear-gradient(top, #333, #7A207D);
  background-image: linear-gradient(top, #333, #7A207D);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333', endColorstr='#7A207D', GradientType=0);
}

